Estilização da página e cta adicionado

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <!-- End Google Tag Manager -->
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
   <title>Teste GTM</title>
 </head>
 <body>
@@ -17,6 +18,8 @@
   <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MRKWC5D"
   height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <!-- End Google Tag Manager (noscript) -->
-  <h1>Teste GTM</h1>
+  <h1 class="titulo">Teste GTM</h1>
+
+  <a href="#" class="btn">Saiba mais</a>
 </body>
 </html>
