--- a/index.html
+++ b/index.html
@@ -60,9 +60,11 @@
       <div class="col-12 col-lg-4">
         <div class="card" style="width: 18rem;">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
+            <h5 class="card-title">Notícias</h5>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="btn btn-primary">Card 1</a>
+            <a href="#" class="btn btn-primary" onclick="dataLayer.push({
+              'cardTitle': document.querySelector('.card-title').textContent
+            });">Card 1</a>
           </div>
         </div>
       </div>
@@ -80,9 +82,11 @@
       <div class="col-12 col-lg-4">
         <div class="card" style="width: 18rem;">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
+            <h5 class="card-title">Dicas de Viagem</h5>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="btn btn-primary">Card 3</a>
+            <a href="#" class="btn btn-primary" onclick="dataLayer.push({
+              'cardTitle': document.querySelector('.card-title').textContent
+            });">Card 3</a>
           </div>
         </div>
       </div>
