--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
           <div class="card-body">
             <h5 class="card-title">Notícias</h5>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="btn btn-primary" onclick="dataLayer.push({
+            <a href="#card1" class="btn btn-primary" onclick="dataLayer.push({
               'cardTitle': document.querySelector('.card-title').textContent
-            });">Card 1</a>
+            });">Saiba mais</a>
           </div>
         </div>
       </div>
@@ -73,9 +73,9 @@
           <div class="card-body">
             <h5 class="card-title">Viagens</h5>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="btn btn-primary" onclick="dataLayer.push({
+            <a href="#card2" class="btn btn-primary" onclick="dataLayer.push({
               'cardTitle': document.querySelector('.card-title').textContent
-            });">Card 2</a>
+            });">Saiba mais</a>
           </div>
         </div>
       </div>
@@ -84,9 +84,9 @@
           <div class="card-body">
             <h5 class="card-title">Dicas de Viagem</h5>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="btn btn-primary" onclick="dataLayer.push({
+            <a href="#card3" class="btn btn-primary" onclick="dataLayer.push({
               'cardTitle': document.querySelector('.card-title').textContent
-            });">Card 3</a>
+            });">Saiba mais</a>
           </div>
         </div>
       </div>
