--- a/features.html
+++ b/features.html
@@ -63,7 +63,7 @@
             <h5 class="card-title">Notícias</h5>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
             <a href="#card1" class="btn btn-primary" onclick="dataLayer.push({
-              'cardTitle': document.querySelector('.card-title').textContent
+              'cardTitle': document.getElementsByClassName('link_saibaMais')[0]
             });">Saiba mais</a>
           </div>
         </div>
@@ -74,7 +74,7 @@
             <h5 class="card-title">Viagens</h5>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
             <a href="#card2" class="btn btn-primary" onclick="dataLayer.push({
-              'cardTitle': document.querySelector('.card-title').textContent
+              'cardTitle': document.getElementsByClassName('link_saibaMais')[1]
             });">Saiba mais</a>
           </div>
         </div>
@@ -82,10 +82,10 @@
       <div class="col-12 col-lg-4">
         <div class="card" style="width: 18rem;">
           <div class="card-body">
-            <h5 class="card-title">Dicas de viagem</h5>
+            <h5 class="card-title">Dicas de Viagem</h5>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
             <a href="#card3" class="btn btn-primary" onclick="dataLayer.push({
-              'cardTitle': document.querySelector('.card-title').textContent
+              'cardTitle': document.getElementsByClassName('link_saibaMais')[2]
             });">Saiba mais</a>
           </div>
         </div>
