Ajustes no dataLayer

--- a/features.html
+++ b/features.html
@@ -63,7 +63,7 @@
             <h5 class="card-title">Notícias</h5>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
             <a href="#card1" class="btn btn-primary" onclick="dataLayer.push({
-              'cardTitle': document.getElementsByClassName('link_saibaMais')[0]
+              'cardTitle': document.getElementsByClassName('link_saibaMais')[0].textContent
             });">Saiba mais</a>
           </div>
         </div>
@@ -74,7 +74,7 @@
             <h5 class="card-title">Viagens</h5>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
             <a href="#card2" class="btn btn-primary" onclick="dataLayer.push({
-              'cardTitle': document.getElementsByClassName('link_saibaMais')[1]
+              'cardTitle': document.getElementsByClassName('link_saibaMais')[1].textContent
             });">Saiba mais</a>
           </div>
         </div>
@@ -85,7 +85,7 @@
             <h5 class="card-title">Dicas de Viagem</h5>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
             <a href="#card3" class="btn btn-primary" onclick="dataLayer.push({
-              'cardTitle': document.getElementsByClassName('link_saibaMais')[2]
+              'cardTitle': document.getElementsByClassName('link_saibaMais')[2].textContent
             });">Saiba mais</a>
           </div>
         </div>
