--- a/features.html
+++ b/features.html
@@ -62,7 +62,7 @@
           <div class="card-body">
             <h5 class="card-title">Notícias</h5>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#card1" class="btn btn-primary" onclick="dataLayer.push({
+            <a href="#card1" class="btn btn-primary link_saibaMais" onclick="dataLayer.push({
               'cardTitle': document.getElementsByClassName('link_saibaMais')[0].innerText
             });">Saiba mais</a>
           </div>
@@ -73,7 +73,7 @@
           <div class="card-body">
             <h5 class="card-title">Viagens</h5>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#card2" class="btn btn-primary" onclick="dataLayer.push({
+            <a href="#card2" class="btn btn-primary link_saibaMais" onclick="dataLayer.push({
               'cardTitle': document.getElementsByClassName('link_saibaMais')[1].innerText
             });">Saiba mais</a>
           </div>
@@ -84,7 +84,7 @@
           <div class="card-body">
             <h5 class="card-title">Dicas de Viagem</h5>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#card3" class="btn btn-primary" onclick="dataLayer.push({
+            <a href="#card3" class="btn btn-primary link_saibaMais" onclick="dataLayer.push({
               'cardTitle': document.getElementsByClassName('link_saibaMais')[2].innerText
             });">Saiba mais</a>
           </div>
