Inseri embed do spotify

--- a/features.html
+++ b/features.html
@@ -90,6 +90,10 @@
           </div>
         </div>
       </div>
+
+      <div class="col-12">
+        <iframe src="https://open.spotify.com/embed/playlist/37i9dQZF1DWWQRwui0ExPn" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+      </div>
     </div>
   </div>
 
